--- a/kubeadm/04.jenkins-build.md
+++ b/kubeadm/04.jenkins-build.md
@@ -1,331 +1,322 @@
-# Jenkins 기반 CI 빌드 가이드
+# Jenkins 기반 CI 빌드 가이드 (Linux 직접 설치)
 
-Kubernetes 클러스터 또는 별도 서버에 Jenkins를 설치하고, 소스 코드 빌드·테스트·이미지 빌드 파이프라인을 구성하는 가이드입니다. 01번 문서에서 구성한 단일 노드 Kubernetes를 기준으로 합니다.
+Kubernetes Pod가 아닌 **Linux 서버에 Jenkins를 직접 설치**하고, 소스 코드 빌드·테스트·이미지 빌드 파이프라인을 구성하는 가이드입니다. OpenJDK 17 기반이며, 01번 문서의 kubeadm 클러스터와 연동할 수 있습니다.
+
+---
+
+## 목차
+
+1. [기존 Jenkins Pod 완전 삭제 (Kubernetes 사용 중이었던 경우)](#기존-jenkins-pod-완전-삭제-kubernetes-사용-중이었던-경우)
+2. [사전 요구사항](#사전-요구사항)
+3. [1단계: Java 17 설치](#1단계-java-17-설치)
+4. [2단계: Jenkins 저장소 추가 및 설치](#2단계-jenkins-저장소-추가-및-설치)
+5. [3단계: Jenkins 홈 디렉토리 및 서비스 설정](#3단계-jenkins-홈-디렉토리-및-서비스-설정)
+6. [4단계: Jenkins 서비스 시작 및 방화벽](#4단계-jenkins-서비스-시작-및-방화벽)
+7. [5단계: 초기 비밀번호 확인 및 웹 접속](#5단계-초기-비밀번호-확인-및-웹-접속)
+8. [6단계: Jenkins 기본 설정 및 플러그인](#6단계-jenkins-기본-설정-및-플러그인)
+9. [7단계: kubectl / Docker / Maven (선택)](#7단계-kubectl--docker--maven-선택)
+10. [8단계: 파이프라인 Job 예시](#8단계-파이프라인-job-예시)
+11. [9단계: 동작 확인](#9단계-동작-확인)
+
+---
+
+## 기존 Jenkins Pod 완전 삭제 (Kubernetes 사용 중이었던 경우)
+
+이전에 Kubernetes에 Jenkins를 Pod로 배포했다면, Linux 직접 설치로 전환하기 전에 아래 순서로 **기존 Jenkins 리소스를 완전히 삭제**합니다.
+
+### 삭제 순서
+
+```bash
+# 1. jenkins 네임스페이스의 Deployment, Service, PVC 등 삭제
+kubectl delete deployment jenkins -n jenkins --ignore-not-found=true
+kubectl delete service jenkins -n jenkins --ignore-not-found=true
+kubectl delete pvc jenkins-pvc -n jenkins --ignore-not-found=true
+
+# 2. 에이전트용으로 만든 Role / RoleBinding 삭제 (08 문서 등에서 적용한 경우)
+kubectl delete role jenkins-agent-role -n jenkins --ignore-not-found=true
+kubectl delete rolebinding jenkins-agent-rolebinding -n jenkins --ignore-not-found=true
+
+# 3. 네임스페이스 내 모든 리소스 확인 후 정리
+kubectl get all,pvc -n jenkins
+# 남은 리소스가 있으면 개별 삭제
+# kubectl delete <resource-type> <name> -n jenkins
+
+# 4. jenkins 네임스페이스 삭제 (내부 리소스가 모두 삭제된 뒤)
+kubectl delete namespace jenkins
+
+# 5. (선택) 수동으로 만든 PV가 있다면 삭제
+kubectl get pv | grep jenkins
+# kubectl delete pv jenkins-pv   # 해당 PV 이름으로 삭제
+```
+
+### Helm으로 설치했던 경우
+
+```bash
+helm uninstall jenkins -n jenkins
+kubectl delete pvc -n jenkins --all   # PVC가 "Released"로 남을 수 있음
+kubectl delete namespace jenkins
+```
+
+### 삭제 확인
+
+```bash
+kubectl get namespace jenkins   # Error: namespaces "jenkins" not found
+kubectl get pv | grep jenkins   # (해당 PV 없음)
+```
+
+이후 동일 서버 또는 다른 Linux 서버에서 본 문서의 **Linux 직접 설치** 단계를 진행하면 됩니다.
 
 ---
 
 ## 사전 요구사항
 
-- Kubernetes 클러스터 (kubeadm 단일 노드 또는 다중 노드)
-- `kubectl` 설정 완료 (`$HOME/.kube/config`)
+- **Linux 서버**: RHEL 9 / Rocky Linux 9 / CentOS Stream 9 등 (dnf 사용)
+- **관리자 권한**: `sudo` 가능
 - Git 저장소 접근 가능 (GitLab 등)
-- 컨테이너 레지스트리 접근 (Docker Hub, Harbor, GitLab Registry 등)
+- 컨테이너 레지스트리 접근 (Docker Hub, Private Registry 등)
+- (선택) Kubernetes 클러스터 연동 시 `kubectl` 및 kubeconfig
 
 ---
 
-## 설치 전 확인
-
-### kubectl 설치 및 클러스터 접속
-01번 문서에서 이미 설정했다면 생략 가능합니다.
+## 1단계: Java 17 설치
 
 ```bash
-# kubectl이 없을 경우 (Linux, 클러스터 노드와 동일한 버전 권장)
-curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-chmod +x kubectl
-sudo mv kubectl /usr/local/bin/
+# 1. Java 17 설치
+sudo dnf install -y java-17-openjdk java-17-openjdk-devel
 
-# 클러스터 접속 확인
-kubectl cluster-info
-kubectl get nodes
+# 2. Java 버전 확인
+java -version
+
+# 3. 설치된 Java 목록 확인
+sudo alternatives --config java
 ```
 
-**예상:** `cluster-info`에서 API Server 주소가 보이고, `get nodes`에서 노드가 `Ready` 상태여야 합니다.
+**예상 출력:**
 
-### 스토리지 클래스 확인 (PVC 사용 시)
-Jenkins용 PVC를 사용하려면 기본 StorageClass가 있거나, 수동으로 PV를 준비해야 합니다.
+```
+openjdk version "17.0.x" ...
+OpenJDK Runtime Environment ...
+```
+
+Java 17이 기본이 아니면 해당 번호를 선택합니다.
 
 ```bash
-kubectl get storageclass
+# 4. JAVA_HOME 설정
+echo 'export JAVA_HOME=/usr/lib/jvm/java-17-openjdk' | sudo tee /etc/profile.d/java17.sh
+echo 'export PATH=$JAVA_HOME/bin:$PATH' | sudo tee -a /etc/profile.d/java17.sh
+source /etc/profile.d/java17.sh
+
+# 5. 확인
+echo $JAVA_HOME
+java -version
 ```
 
-**예상:** `default` 표시가 있는 StorageClass가 있으면 PVC가 자동 바인딩됩니다.
+---
 
-**`No resources found`인 경우:** 아래 중 하나로 StorageClass를 구성한 뒤 Jenkins PVC 단계를 진행합니다.
-
-#### (A) local-path-provisioner 설치 (단일 노드 권장)
-노드 로컬 디스크에 볼륨을 자동 생성합니다. 01번 문서의 단일 노드 클러스터에 적합합니다.
+## 2단계: Jenkins 저장소 추가 및 설치
 
 ```bash
-# Rancher local-path-provisioner 배포 (기본 저장 경로: /opt/local-path-provisioner)
-kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.28/deploy/local-path-storage.yaml
+# 1. Jenkins 저장소 추가
+sudo wget -O /etc/yum.repos.d/jenkins.repo https://pkg.jenkins.io/redhat-stable/jenkins.repo
 
-# default StorageClass로 지정 (선택)
-kubectl patch storageclass local-path -p '{"metadata": {"annotations":{"storageclass.kubernetes.io/is-default-class":"true"}}}'
+# 2. GPG 키 가져오기
+sudo rpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io-2023.key
 
-# 확인
-kubectl get storageclass
-kubectl get pods -n local-path-storage
+# 3. Jenkins 설치
+sudo dnf install -y jenkins
+
+# 4. 버전 확인
+rpm -q jenkins
 ```
 
-**예상:** `local-path` StorageClass가 보이고, `local-path-storage` 네임스페이스의 Pod가 `Running`이면 PVC가 자동으로 바인딩됩니다.
+**예상:** `jenkins-2.xxx.x-1.1.noarch` 등으로 표시됩니다.
 
-#### (B) 수동 PV/PVC (StorageClass 없이)
-StorageClass를 쓰지 않고, 미리 만든 PV에 PVC를 바인딩하는 방식입니다. 1-2의 PVC YAML에 `storageClassName: ""`를 넣고, 아래처럼 PV를 하나 만든 뒤 사용합니다.
+---
 
-```yaml
-# jenkins-pv.yaml (노드 경로는 실제 존재하는 디렉터리로 변경)
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: jenkins-pv
-spec:
-  capacity:
-    storage: 10Gi
-  accessModes:
-    - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: ""
-  hostPath:
-    path: /data/jenkins
-    type: DirectoryOrCreate
-```
+## 3단계: Jenkins 홈 디렉토리 및 서비스 설정
+
+기본 `/var/lib/jenkins` 대신 `/data/jenkins`를 사용하도록 변경합니다.
 
 ```bash
-# 노드에 디렉터리 생성 (Jenkins가 배포될 노드에서)
+# 1. Jenkins 데이터 디렉토리 생성
 sudo mkdir -p /data/jenkins
-sudo chown 1000:1000 /data/jenkins
+sudo chown -R jenkins:jenkins /data/jenkins
 
-kubectl apply -f jenkins-pv.yaml
+# 2. systemd 서비스에서 JENKINS_HOME 변경
+sudo sed -i 's|Environment="JENKINS_HOME=/var/lib/jenkins"|Environment="JENKINS_HOME=/data/jenkins"|g' /usr/lib/systemd/system/jenkins.service
+
+# 3. Java 17 사용하도록 override 추가
+sudo mkdir -p /etc/systemd/system/jenkins.service.d
+sudo tee /etc/systemd/system/jenkins.service.d/override.conf > /dev/null <<EOF
+[Service]
+Environment="JAVA_HOME=/usr/lib/jvm/java-17-openjdk"
+Environment="JENKINS_JAVA_CMD=/usr/lib/jvm/java-17-openjdk/bin/java"
+EOF
+
+# 4. systemd 재로드
+sudo systemctl daemon-reload
+
+# 5. 설정 확인
+sudo systemctl cat jenkins.service | grep -E "JENKINS_HOME|JAVA"
 ```
 
-> **파일 위치:** `jenkins-pv.yaml`은 어디에 두어도 됩니다. `kubectl`을 실행하는 쪽에서 경로만 맞으면 됩니다. 예: Jenkins 매니페스트를 한 폴더에 모을 경우 `~/k8s-jenkins/jenkins-pv.yaml`에 저장한 뒤 해당 디렉터리에서 `kubectl apply -f jenkins-pv.yaml` 실행, 또는 `kubectl apply -f ~/k8s-jenkins/jenkins-pv.yaml` 처럼 전체 경로로 지정합니다.
+**예상 출력:**
 
-1-2의 PVC에는 `storageClassName: ""`를 추가하고, `volumeName: jenkins-pv`를 지정하면 해당 PV에 바인딩됩니다.
-
----
-
-## 1단계: Jenkins 네임스페이스 및 PVC
-
-### 1-1. 네임스페이스 생성
-```bash
-kubectl create namespace jenkins
 ```
-
-### 1-2. PersistentVolumeClaim (선택)
-Jenkins 데이터 영속화를 위해 PVC를 생성합니다.
-
-```yaml
-# jenkins-pvc.yaml
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: jenkins-pvc
-  namespace: jenkins
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
-```
-
-```bash
-kubectl apply -f jenkins-pvc.yaml
+Environment="JENKINS_HOME=/data/jenkins"
+Environment="JAVA_HOME=/usr/lib/jvm/java-17-openjdk"
+Environment="JENKINS_JAVA_CMD=/usr/lib/jvm/java-17-openjdk/bin/java"
 ```
 
 ---
 
-## 2단계: Jenkins 배포 (Deployment + Service)
-
-### 2-1. Jenkins Deployment
-```yaml
-# jenkins-deployment.yaml
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: jenkins
-  namespace: jenkins
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: jenkins
-  template:
-    metadata:
-      labels:
-        app: jenkins
-    spec:
-      securityContext:
-        fsGroup: 1000
-      containers:
-        - name: jenkins
-          image: jenkins/jenkins:lts-jdk17
-          ports:
-            - containerPort: 8080
-            - containerPort: 50000
-          env:
-            - name: JAVA_OPTS
-              value: "-Djenkins.install.runSetupWizard=true -Xmx1024m"
-          volumeMounts:
-            - name: jenkins-home
-              mountPath: /var/jenkins_home
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "1Gi"
-              cpu: "1000m"
-      volumes:
-        - name: jenkins-home
-          persistentVolumeClaim:
-            claimName: jenkins-pvc
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: jenkins
-  namespace: jenkins
-spec:
-  type: NodePort
-  ports:
-    - port: 8080
-      targetPort: 8080
-      nodePort: 30080
-      name: http
-    - port: 50000
-      targetPort: 50000
-      name: agent
-  selector:
-    app: jenkins
-```
+## 4단계: Jenkins 서비스 시작 및 방화벽
 
 ```bash
-kubectl apply -f jenkins-deployment.yaml
+# 1. 서비스 시작 및 부팅 시 자동 시작
+sudo systemctl start jenkins
+sudo systemctl enable jenkins
+
+# 2. 상태 확인 (기동에 1~2분 걸릴 수 있음)
+sleep 30
+sudo systemctl status jenkins
 ```
 
-**jenkins-deployment.yaml 수정 후 적용 방법**
-
-1. 파일 수정 후 저장
-2. 매니페스트 적용 (Deployment 변경 시 롤링 업데이트됨)
+**예상:** `Active: active (running)` 이어야 합니다.
 
 ```bash
-# jenkins-deployment.yaml이 있는 디렉터리에서
-kubectl apply -f jenkins-deployment.yaml
-
-# 적용 상태 확인 (새 Pod가 기동될 때까지 대기)
-kubectl rollout status deployment/jenkins -n jenkins
+# 3. 방화벽에서 8080 포트 허용
+sudo firewall-cmd --permanent --add-port=8080/tcp
+sudo firewall-cmd --reload
+sudo firewall-cmd --list-ports | grep 8080
 ```
 
-변경이 Pod에 반영되지 않을 때는 수동으로 재시작할 수 있습니다.
+실패 시 로그 확인:
 
 ```bash
-kubectl rollout restart deployment/jenkins -n jenkins
-kubectl rollout status deployment/jenkins -n jenkins
-```
-
-### 2-2. Jenkins 기동 대기
-```bash
-kubectl rollout status deployment/jenkins -n jenkins
-kubectl get pods -n jenkins
-```
-
-**예상:** Pod가 `Running`이 되면 브라우저에서 `http://<노드IP>:30080`으로 접속합니다.
-
-**노드 IP 확인 방법**
-
-```bash
-# 클러스터 노드와 내부 IP 확인 (INTERNAL-IP 열 참고)
-kubectl get nodes -o wide
-```
-
-단일 노드라면 출력된 노드의 `INTERNAL-IP`(예: 172.16.0.10)가 접속할 주소입니다. 해당 노드 서버에서 브라우저를 쓴다면 `http://localhost:30080` 또는 `http://127.0.0.1:30080`으로도 접속할 수 있습니다.
-
-### 2-3. 초기 비밀번호 확인
-Jenkins가 완전히 기동한 뒤에만 `initialAdminPassword` 파일이 생성됩니다. Pod가 `Running`이어도 내부 초기화에는 1~2분 걸릴 수 있으므로, **파일이 없다고 나오면 1~2분 기다린 뒤 다시 시도**하거나, 로그에서 기동 완료 메시지를 확인합니다.
-
-```bash
-# 기동 완료 여부 확인 (로그에 "Jenkins is fully up and running" 등이 보이면 시도)
-kubectl logs -n jenkins deployment/jenkins -f
-# Ctrl+C로 중단 후 아래 실행
-
-kubectl exec -n jenkins deployment/jenkins -- cat /var/jenkins_home/secrets/initialAdminPassword
-```
-
-> **`runSetupWizard=false`인 경우:** 설정 마법사를 끄면 초기 비밀번호 화면이 없을 수 있어 위 파일이 생성되지 않을 수 있습니다. 최초 1회는 `runSetupWizard=true`로 두고 관리자 계정을 만든 뒤, 필요 시 `false`로 변경합니다.
-
-### 2-4. 설치 검증
-```bash
-# Pod 정상 기동
-kubectl get pods -n jenkins -l app=jenkins
-
-# 서비스 포트 확인
-kubectl get svc -n jenkins jenkins
-```
-
-**예상:** Pod가 `Running`, Service의 NodePort(30080)가 보이면 브라우저로 `http://<노드IP>:30080` 접속 후 초기 설정을 진행합니다.
-
----
-
-## (대안) Helm으로 Jenkins 설치
-
-Kubernetes에 Helm이 설치되어 있다면 아래 방식으로 설치할 수 있습니다. 기존 수동 배포와 동시에 사용하지 마세요.
-
-```bash
-# Helm repo 추가
-helm repo add jenkins https://charts.jenkins.io
-helm repo update
-
-# 네임스페이스 생성
-kubectl create namespace jenkins
-
-# 설치 (필요 시 values.yaml로 커스터마이즈)
-helm install jenkins jenkins/jenkins -n jenkins \
-  --set controller.serviceType=NodePort \
-  --set controller.nodePort=30080
-```
-
-초기 비밀번호 확인:
-```bash
-kubectl exec -n jenkins svc/jenkins -c jenkins -- cat /var/jenkins_home/secrets/initialAdminPassword
+sudo journalctl -u jenkins -n 50 --no-pager
+sudo ss -tulpn | grep 8080
 ```
 
 ---
 
-## 3단계: Jenkins 기본 설정
+## 5단계: 초기 비밀번호 확인 및 웹 접속
 
-### 3-0. 보안 설정 (권장)
+```bash
+# Jenkins가 완전히 기동할 때까지 대기
+until sudo test -f /data/jenkins/secrets/initialAdminPassword; do
+  echo "대기 중..."
+  sleep 5
+done
 
-비밀번호 없이 접속되는 경우, 아직 보안이 꺼져 있거나 설정 마법사가 건너뛰어진 상태입니다. 운영 환경에서는 반드시 인증을 설정하는 것이 좋습니다.
+echo "=== Jenkins 초기 관리자 비밀번호 ==="
+sudo cat /data/jenkins/secrets/initialAdminPassword
+echo "================================"
+```
 
-1. **관리자 계정 생성·설정**
-   - **Manage Jenkins** → **Security** → **Configure Global Security**
-   - **Security Realm**: "Jenkins' own user database" 선택 후 **Save**
-   - **Manage Jenkins** → **Users**에서 기존 사용자(예: admin) 비밀번호 설정 또는 새 사용자 추가
+**접속 URL:** `http://<서버IP>:8080`
 
-2. **로그인 필수로 변경**
-   - **Configure Global Security** → **Authorization**
-   - "Logged-in users can do anything" 또는 "Matrix-based security" 등으로 설정해, 익명 접근을 막고 로그인한 사용자만 사용하도록 지정
+```bash
+SERVER_IP=$(hostname -I | awk '{print $1}')
+echo "Jenkins URL: http://$SERVER_IP:8080"
+```
 
-3. **(선택) 설정 마법사로 처음부터 설정**
-   - `jenkins-deployment.yaml`에서 `JAVA_OPTS`의 `runSetupWizard=true`로 두고 재배포하면, 다음 기동 시 초기 잠금 해제 화면과 설정 마법사가 표시됩니다. 여기서 관리자 계정 생성 및 보안 설정을 진행할 수 있습니다.
+웹에서 초기 설정:
 
-### 3-1. 필수 플러그인
-- **Pipeline**, **Git**, **Kubernetes**, **Docker Pipeline**, **Credentials** 등 설치
-- Manage Jenkins → Plugins → Available에서 검색 후 설치
-
-### 3-2. Kubernetes 연동 (Jenkins Agent)
-Manage Jenkins → Nodes → Configure Clouds → Add a new cloud → Kubernetes
-
-- Kubernetes URL: `https://kubernetes.default` (클러스터 내부)
-- Jenkins URL: `http://jenkins.jenkins.svc.cluster.local:8080`
-- Pod Template: JNLP 이미지 등 필요 시 커스텀
-
-### 3-3. GitLab / 레지스트리 Credentials
-- Manage Jenkins → Credentials → Add
-- Username/Password 또는 SSH Key로 Git 저장소, Docker 레지스트리 등록
+1. **Unlock Jenkins**: 위에서 확인한 비밀번호 입력 후 Continue
+2. **Customize Jenkins**: Install suggested plugins
+3. **Create First Admin User**: 관리자 계정 생성 (예: admin / 비밀번호)
+4. **Instance Configuration**: Jenkins URL 확인 후 Save and Finish
+5. **Start using Jenkins** 클릭
 
 ---
 
-## 4단계: 파이프라인 Job 예시 (Jenkinsfile)
+## 6단계: Jenkins 기본 설정 및 플러그인
 
-### 4-1. Pipeline Job 생성
-- New Item → Pipeline
-- Pipeline definition: **Pipeline script from SCM**
-- SCM: Git, Repository URL에 GitLab 저장소 URL 입력
-- Script Path: `Jenkinsfile`
+### 6-1. 보안 설정 (권장)
 
-### 4-2. Jenkinsfile 예시 (빌드 → 테스트 → 이미지 빌드)
+- **Manage Jenkins** → **Security** → **Configure Global Security**
+- **Security Realm**: Jenkins' own user database
+- **Authorization**: Logged-in users can do anything 또는 Matrix-based security
+
+### 6-2. 필수 플러그인
+
+**Manage Jenkins** → **Plugins** → **Available plugins**에서 설치:
+
+| 플러그인 | 용도 |
+|---------|------|
+| Pipeline | Pipeline Job, Jenkinsfile |
+| Git | Git 저장소 체크아웃 |
+| Docker Pipeline | docker.build(), withRegistry() |
+| Credentials | 저장소·레지스트리 인증 |
+| Kubernetes | (선택) Kubernetes Cloud로 Agent Pod 사용 시 |
+
+설치 후 **Restart Jenkins when installation is complete** 선택 후 재시작합니다.
+
+### 6-3. Kubernetes 연동 (선택)
+
+Jenkins를 Kubernetes 클러스터에서 에이전트 Pod를 띄우려면:
+
+- **Manage Jenkins** → **Nodes** → **Configure Clouds** → **Kubernetes**
+- Kubernetes URL: `https://<API서버주소>`
+- Jenkins URL: `http://<이 서버 IP>:8080`
+- Credentials: kubeconfig 또는 서비스 계정 토큰
+
+Linux 직접 설치 시에는 **agent any** 로 같은 서버에서 빌드하는 구성이 일반적입니다.
+
+---
+
+## 7단계: kubectl / Docker / Maven (선택)
+
+### 7-1. kubectl (Kubernetes 배포 시)
+
+Jenkins에서 `kubectl apply`를 쓰려면 Jenkins 사용자에게 kubeconfig를 복사합니다.
+
+```bash
+# 클러스터 노드의 kubeconfig를 Jenkins 사용자 홈에 복사
+sudo mkdir -p /data/jenkins/.kube
+sudo cp ~/.kube/config /data/jenkins/.kube/config
+sudo chown -R jenkins:jenkins /data/jenkins/.kube
+sudo chmod 600 /data/jenkins/.kube/config
+
+# Jenkins 사용자로 테스트
+sudo -u jenkins kubectl get nodes
+```
+
+### 7-2. Docker (이미지 빌드 시)
+
+같은 서버에서 `docker build`를 쓰는 경우:
+
+```bash
+sudo usermod -aG docker jenkins
+sudo systemctl restart jenkins
+# 재시작 후
+sudo -u jenkins docker ps
+```
+
+### 7-3. Maven (Java 빌드 시)
+
+```bash
+sudo dnf install -y maven
+mvn -version
+sudo -u jenkins mvn -version
+```
+
+Jenkins **Global Tool Configuration**에서 Maven 자동 설치를 쓰거나, 위처럼 시스템 Maven을 사용할 수 있습니다.
+
+---
+
+## 8단계: 파이프라인 Job 예시 (Jenkinsfile)
+
+### 8-1. Pipeline Job 생성
+
+- **New Item** → 이름 입력 → **Pipeline** → OK
+- **Pipeline**: Definition → **Pipeline script from SCM**
+- **SCM**: Git, Repository URL, Credentials, Branch 설정
+- **Script Path**: `Jenkinsfile`
+
+### 8-2. Jenkinsfile 예시 (빌드 → 테스트 → 이미지 빌드)
+
 ```groovy
 pipeline {
   agent any
@@ -342,7 +333,6 @@ pipeline {
     stage('Build') {
       steps {
         sh 'mvn clean package -DskipTests'
-        // 또는: npm ci && npm run build
       }
     }
     stage('Test') {
@@ -369,16 +359,33 @@ pipeline {
 }
 ```
 
+Linux 직접 설치 환경에서는 **agent any** 로 Jenkins 서버에서 실행됩니다. Registry 주소와 Credentials ID는 실제 환경에 맞게 수정합니다.
+
 ---
 
-## 5단계: 동작 확인
+## 9단계: 동작 확인
 
-### 5-1. 파이프라인 실행
-- Job 실행 후 Console Output에서 단계별 로그 확인
+### 9-1. 파이프라인 실행
+
+- Job 실행 후 **Console Output**에서 단계별 성공 여부 확인
 - 빌드 산출물 및 이미지 푸시 여부 확인
 
-### 5-2. ArgoCD 연동 시
-빌드된 이미지 태그를 Git 레포지토리(Helm/Kustomize 매니페스트)에 반영하거나, ArgoCD에서 이미지 업데이트 정책으로 자동 반영하도록 구성할 수 있습니다. (03. ArgoCD 배포 가이드 참고)
+### 9-2. 설치 검증 (터미널)
+
+```bash
+echo "=== Java ==="
+java -version 2>&1 | head -1
+echo "=== Jenkins 서비스 ==="
+sudo systemctl is-active jenkins
+echo "=== Jenkins 홈 ==="
+ls -la /data/jenkins/ | head -5
+echo "=== Jenkins URL ==="
+echo "http://$(hostname -I | awk '{print $1}'):8080"
+```
+
+### 9-3. ArgoCD 연동 시
+
+빌드된 이미지 태그를 Git(Helm/Kustomize)에 반영하거나, Argo CD 이미지 업데이트 정책으로 자동 반영할 수 있습니다. (05. Argo CD 배포 가이드 참고)
 
 ---
 
@@ -386,10 +393,11 @@ pipeline {
 
 | 항목 | 내용 |
 |------|------|
-| 네임스페이스 | jenkins |
-| 접속 URL | http://\<노드IP\>:30080 |
-| 초기 비밀번호 | `kubectl exec ... initialAdminPassword` |
-| 파이프라인 | Jenkinsfile 기반, SCM 연동 |
+| 설치 방식 | Linux 직접 설치 (systemd, dnf) |
+| JENKINS_HOME | /data/jenkins |
+| 접속 URL | http://\<서버IP\>:8080 |
+| 초기 비밀번호 | `sudo cat /data/jenkins/secrets/initialAdminPassword` |
+| agent | agent any (동일 서버에서 빌드) |
 
-- **Helm 설치:** `helm repo add jenkins https://charts.jenkins.io` 후 `helm install jenkins jenkins/jenkins -n jenkins` 로 대체 가능
-- **문제 발생 시:** `kubectl logs -n jenkins deployment/jenkins -f` 로 로그 확인
+- **기존 K8s Jenkins 제거:** 문서 상단 [기존 Jenkins Pod 완전 삭제](#기존-jenkins-pod-완전-삭제-kubernetes-사용-중이었던-경우) 참고
+- **문제 발생 시:** `sudo journalctl -u jenkins -f` 로 로그 확인
