--- a/kubeadm/06.manual.md
+++ b/kubeadm/06.manual.md
@@ -11,10 +11,11 @@
 | 01 | 01.kubeadm-rocky-single-node-containerd.md | Kubernetes 단일 노드 구축 (Rocky Linux + containerd) |
 | 02 | 02.docker-registry.md | Docker Registry 설치 (Private 레지스트리, Jenkins/클러스터 연동) |
 | 03 | 03.gitlab-source.md | GitLab 소스관리 (저장소 구조, Jenkins/Argo CD 연동) |
-| 04 | 04.jenkins-build.md | Jenkins CI 빌드 (파이프라인, 이미지 빌드·푸시) |
-| 05 | 05.argocd-deploy.md | Argo CD CD 배포 (Git 기반 배포·동기화) |
+| 04 | 04.jenkins-build.md | Jenkins CI 빌드 (Linux 직접 설치, 파이프라인, 이미지 빌드·푸시) |
+| 05 | 05.argocd-deploy.md | Argo CD 배포 (Git 기반 배포·동기화) |
 | 06 | 06.manual.md | 종합 메뉴얼 (본 문서) |
 | 07 | 07.tomcat-war-deploy.md | Tomcat + WAR Kubernetes 배포 (이미지 빌드·Deployment·Service) |
+| 08 | 08.jenkins-tomcat-deploy.md | Jenkins로 Tomcat WAR 빌드·배포 (04+07 연계) |
 
 ---
 
@@ -27,10 +28,11 @@
 | Docker Registry | 02: Docker 컨테이너 (registry:2) | `docker ps \| grep registry`, https://\<노드IP\>:5000 |
 | GitLab (선택) | 03: Kubernetes(Helm) 또는 Docker | 03 "GitLab 서버 설치" 절 |
 | Git 클라이언트 | 03: dnf / 공식 설치 프로그램 | `git --version` |
-| Jenkins | 04: Deployment+YAML 또는 Helm | `kubectl get pods -n jenkins`, http://\<노드IP\>:30080 |
+| Jenkins | 04: Linux 직접 설치 (systemd) | `sudo systemctl status jenkins`, http://\<서버IP\>:8080 |
 | Argo CD | 05: manifest install.yaml | `kubectl get pods -n argocd`, Argo CD UI |
 | Argo CD CLI | 05: 1-4절 (Linux/Windows/macOS) | `argocd version --client` |
 | Tomcat WAR 앱 | 07: Dockerfile + Deployment/Service | `kubectl get pods -n dev` |
+| Jenkins → Tomcat 배포 | 08: 04+07 연계 (WAR 빌드 → 이미지 푸시 → kubectl 배포) | 08번 문서 6단계 확인 |
 
 ---
 
@@ -51,7 +53,11 @@
 5. **배포**  
    - 05: Argo CD 설치, GitLab 저장소 연동, Application 생성 및 자동/수동 Sync
 
-6. **운영**  
+6. **Tomcat WAR 배포 (선택)**  
+   - 07: 수동 이미지 빌드·배포  
+   - 08: Jenkins 파이프라인으로 WAR 빌드 → 이미지 푸시 → Kubernetes 배포
+
+7. **운영**  
    - 06: 아래 일상 점검·트러블슈팅 참고
 
 ---
@@ -67,8 +73,9 @@ kubectl get svc -A
 
 ### Jenkins
 ```bash
-kubectl get pods -n jenkins
-kubectl logs -n jenkins deployment/jenkins -f --tail=100
+sudo systemctl status jenkins
+sudo journalctl -u jenkins -f --tail=100
+# 초기 비밀번호: sudo cat /data/jenkins/secrets/initialAdminPassword
 ```
 
 ### Argo CD
@@ -105,6 +112,8 @@ sudo systemctl status kubelet
 - **03** → 소스·배포 매니페스트 저장소 및 연동 준비 (GitLab)  
 - **04** → 빌드 파이프라인 (Jenkins)  
 - **05** → 배포 파이프라인 (Argo CD)  
-- **06** → 구축 순서·일상 점검·트러블슈팅 참고
+- **06** → 구축 순서·일상 점검·트러블슈팅 참고  
+- **07** → Tomcat WAR 수동 배포  
+- **08** → Jenkins로 Tomcat WAR 빌드·배포 (04+07 연계)
 
 추가 기능 도입 시 기존 기능은 유지한 채, 해당 단계 문서를 보완하거나 새 문서를 순차 번호로 추가하는 것을 권장합니다.
