--- a/kubeadm/08.jenkins-tomcat-deploy.md
+++ b/kubeadm/08.jenkins-tomcat-deploy.md
@@ -1,18 +1,18 @@
 # Jenkins로 Tomcat WAR Kubernetes 배포 가이드
 
-04번(Jenkins CI 빌드)과 07번(Tomcat WAR 배포)을 연계하여, **Jenkins 파이프라인에서 WAR 빌드 → Docker 이미지 빌드·푸시 → Kubernetes 배포**까지 한 번에 수행하는 방법을 설명합니다. Jenkins 설치·설정부터 배포 자동화까지 포함합니다.
+04번(Jenkins CI 빌드, **Linux 직접 설치**)과 07번(Tomcat WAR 배포)을 연계하여, **Jenkins 파이프라인에서 WAR 빌드 → Docker 이미지 빌드·푸시 → Kubernetes 배포**까지 한 번에 수행하는 방법을 설명합니다. Jenkins는 04번 문서에 따라 Linux 서버에 직접 설치된 환경을 기준으로 합니다.
 
 ---
 
 ## 목차
 
 1. [개요 및 사전 요구사항](#개요-및-사전-요구사항)
-2. [Jenkins 설치 및 기동](#1단계-jenkins-설치-및-기동)
-3. [Jenkins 초기 설정 및 플러그인](#2단계-jenkins-초기-설정-및-플러그인)
-4. [Credentials 및 연동 설정](#3단계-credentials-및-연동-설정)
-5. [Pipeline Job 및 Jenkinsfile 작성](#4단계-pipeline-job-및-jenkinsfile-작성) (Maven 사용 방법 포함)
-6. [Kubernetes 배포 단계 연동](#5단계-kubernetes-배포-단계-연동)
-7. [배포 확인 및 트러블슈팅](#6단계-배포-확인-및-트러블슈팅)
+2. [1단계: Jenkins 설치 및 기동](#1단계-jenkins-설치-및-기동)
+3. [2단계: Jenkins 초기 설정 및 플러그인](#2단계-jenkins-초기-설정-및-플러그인)
+4. [3단계: Credentials 및 연동 설정](#3단계-credentials-및-연동-설정)
+5. [4단계: Pipeline Job 및 Jenkinsfile 작성](#4단계-pipeline-job-및-jenkinsfile-작성) (Maven 사용 방법 포함)
+6. [5단계: Kubernetes 배포 단계 연동](#5단계-kubernetes-배포-단계-연동)
+7. [6단계: 배포 확인 및 트러블슈팅](#6단계-배포-확인-및-트러블슈팅)
 
 ---
 
@@ -30,7 +30,7 @@
 |------|-----------|------|
 | Kubernetes 클러스터 | 01번 | `kubectl get nodes` 정상, 단일/다중 노드 |
 | Private Docker Registry | 02번 | 이미지 push/pull용 (예: `$SERVER_IP:5000`) |
-| Jenkins | 04번 | Kubernetes 또는 별도 서버에 Jenkins 배포 |
+| Jenkins | 04번 | Linux 서버에 Jenkins 직접 설치 (systemd, 포트 8080) |
 | Tomcat WAR 배포 구조 | 07번 | Deployment·Service·네임스페이스·imagePullSecrets |
 
 ### 필요한 정보 정리
@@ -45,167 +45,27 @@
 
 ## 1단계: Jenkins 설치 및 기동
 
-04번 문서를 기준으로 Jenkins를 Kubernetes에 배포합니다. 이미 완료했다면 [2단계](#2단계-jenkins-초기-설정-및-플러그인)로 이동하세요.
+**04번 문서** [Jenkins 기반 CI 빌드 가이드 (Linux 직접 설치)](04.jenkins-build.md)에 따라 Linux 서버에 Jenkins를 직접 설치·기동합니다.
 
-### 1-1. 스토리지 클래스 확인
-
-```bash
-kubectl get storageclass
-```
-
-`default` StorageClass가 없으면 04번 문서의 "스토리지 클래스 확인" 절에 따라 local-path-provisioner 또는 수동 PV/PVC를 구성합니다.
-
-### 1-2. 네임스페이스 및 PVC
-
-```bash
-kubectl create namespace jenkins
-```
-
-```yaml
-# jenkins-pvc.yaml
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: jenkins-pvc
-  namespace: jenkins
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
-```
-
-```bash
-kubectl apply -f jenkins-pvc.yaml
-```
-
-### 1-3. Jenkins Deployment 및 Service
-
-```yaml
-# jenkins-deployment.yaml
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: jenkins
-  namespace: jenkins
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: jenkins
-  template:
-    metadata:
-      labels:
-        app: jenkins
-    spec:
-      securityContext:
-        fsGroup: 1000
-      containers:
-        - name: jenkins
-          image: jenkins/jenkins:lts-jdk17
-          ports:
-            - containerPort: 8080
-            - containerPort: 50000
-          env:
-            - name: JAVA_OPTS
-              value: "-Djenkins.install.runSetupWizard=true -Xmx1024m"
-          volumeMounts:
-            - name: jenkins-home
-              mountPath: /var/jenkins_home
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "1Gi"
-              cpu: "1000m"
-      volumes:
-        - name: jenkins-home
-          persistentVolumeClaim:
-            claimName: jenkins-pvc
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: jenkins
-  namespace: jenkins
-spec:
-  type: NodePort
-  ports:
-    - port: 8080
-      targetPort: 8080
-      nodePort: 30080
-      name: http
-    - port: 50000
-      targetPort: 50000
-      name: agent
-  selector:
-    app: jenkins
-```
-
-```bash
-kubectl apply -f jenkins-deployment.yaml
-kubectl rollout status deployment/jenkins -n jenkins
-```
-
-### 1-4. 접속 및 초기 비밀번호
-
-- **접속 URL**: `http://<노드IP>:30080` (노드 IP는 `kubectl get nodes -o wide`로 확인)
-- **초기 비밀번호** (Pod 기동 후 1~2분 뒤 확인):
-
-```bash
-kubectl exec -n jenkins deployment/jenkins -- cat /var/jenkins_home/secrets/initialAdminPassword
-```
-
-출력된 비밀번호로 Jenkins 초기 설정 마법사를 진행합니다.
+- 미설치 시: 04번 문서 1~5단계 진행 후, 초기 비밀번호는 `sudo cat /data/jenkins/secrets/initialAdminPassword`로 확인
+- 설치 완료 시: [2단계](#2단계-jenkins-초기-설정-및-플러그인)로 이동
 
 ---
 
 ## 2단계: Jenkins 초기 설정 및 플러그인
 
-### 2-1. 초기 설정 마법사
-
-1. **Install suggested plugins** 또는 필요한 플러그인만 선택해 설치
-2. **첫 번째 관리자 사용자** 생성 (admin / 비밀번호 등)
-3. **Jenkins URL** 확인 (예: `http://jenkins.jenkins.svc.cluster.local:8080`)
-
-### 2-2. Tomcat WAR 배포에 필요한 플러그인
-
-Manage Jenkins → **Plugins** → **Available plugins**에서 다음을 검색해 설치합니다.
+04번 문서 6단계를 참고해 초기 설정 마법사(관리자 생성, Jenkins URL)를 완료한 뒤, 아래 플러그인을 설치합니다.
 
 | 플러그인 | 용도 |
 |---------|------|
-| **Pipeline** | Pipeline Job, Jenkinsfile 실행 |
-| **Git** | Git 저장소 체크아웃 |
-| **Docker Pipeline** | 파이프라인 내 `docker.build()`, `docker.withRegistry()` 등 |
-| **Credentials** | 저장소·레지스트리·kubectl 인증 정보 저장 |
-| **Kubernetes** | (선택) Kubernetes Cloud로 Agent Pod 실행 |
-| **Maven Integration** | (선택) Maven 자동 설치·`tools { maven '...' }` 사용 시 권장 |
+| Pipeline | Pipeline Job, Jenkinsfile |
+| Git | Git 저장소 체크아웃 |
+| Docker Pipeline | `docker.build()`, `docker.withRegistry()` |
+| Credentials | 저장소·레지스트리·kubectl 인증 |
+| Maven Integration | (선택) Maven 자동 설치, `tools { maven 'M3' }` |
 
-설치 후 **Restart Jenkins when idle**로 재시작합니다.
-
-### 2-3. Docker Pipeline 사용 시 주의사항
-
-- **Jenkins가 Kubernetes Pod로 동작하는 경우**: Jenkins Pod 안에서는 보통 Docker 데몬이 없습니다. 다음 중 하나가 필요합니다.
-  - **Docker-in-Docker (DinD)** sidecar를 Pod에 추가하거나
-  - **Kubernetes Pod Template**에서 Docker가 설치된 Agent 이미지를 쓰거나
-  - **별도 Docker 호스트**에 Jenkins Agent를 연결해 그 호스트에서 `docker build` 실행
-
-실무에서는 **Docker가 설치된 Agent**에서 빌드하거나, **Kaniko** 등 컨테이너 내부에서 이미지를 빌드하는 방식을 많이 사용합니다. 본 가이드에서는 **Jenkins가 Docker 소켓을 사용할 수 있는 환경**(예: 단일 노드에서 Jenkins가 Docker와 같은 노드에 있거나, Agent에 Docker 설치)을 가정하고, `docker.build()` 예시를 사용합니다.
-
-**Kaniko를 사용하는 경우**는 4단계 Jenkinsfile에서 `docker.build()` 대신 Kaniko 단계로 교체할 수 있습니다 (별도 절에서 간단히 안내).
-
-### 2-4. (선택) Kubernetes Cloud 설정
-
-Manage Jenkins → **Nodes** → **Configure Clouds** → **Add a new cloud** → **Kubernetes**
-
-- **Kubernetes URL**: `https://kubernetes.default`
-- **Kubernetes namespace**: `jenkins` 또는 Agent용 네임스페이스
-- **Jenkins URL**: `http://jenkins.jenkins.svc.cluster.local:8080`
-- **Credentials**: Kubernetes API 접근용 인증(서비스 계정 토큰 등)이 필요하면 등록
-
-Pod Template에서 사용할 이미지에 Maven/Gradle·Docker 클라이언트 등이 포함된 이미지를 지정하면, 해당 Agent에서 WAR 빌드 및 Docker 빌드를 수행할 수 있습니다.
+- **Docker 사용**: 04번 7-2단계처럼 같은 서버에 Docker 설치 후 `usermod -aG docker jenkins`, Jenkins 재시작. Docker를 쓸 수 없으면 4-3절 Kaniko로 대체 가능.
+- **Kubernetes Cloud**: Agent Pod 사용 시에만 04번 6-3절 참고. 기본은 `agent any`로 동일 서버 빌드.
 
 ---
 
@@ -243,12 +103,10 @@ WAR 소스가 있는 Git 저장소 접근용입니다.
 
 ### 3-4. Kubernetes (kubectl) 배포용
 
-Jenkins에서 `kubectl apply`를 실행하려면 클러스터 접근 권한이 필요합니다. 방법은 두 가지입니다.
+Jenkins에서 `kubectl apply`를 실행하려면 클러스터 접근 권한이 필요합니다. **04번에서 Linux에 직접 설치한 Jenkins**인 경우:
 
-#### 방법 A: kubeconfig 파일을 Secret으로 마운트
-
-- 배포가 실행되는 환경(예: Jenkins Agent Pod)에 `kubeconfig`가 마운트되어 있고, `KUBECONFIG` 환경 변수로 그 경로를 가리키게 합니다.
-- Jenkins Pod에 kubeconfig를 넣으려면: 노드의 `~/.kube/config`를 Secret으로 만들어 Pod에 마운트하는 방식을 04번 또는 05번 문서 방식으로 구성합니다.
+- **방법 A: Jenkins 서버에 kubeconfig 복사 (권장)**  
+  클러스터 노드의 `~/.kube/config`를 Jenkins 사용자 홈(예: `/data/jenkins/.kube/config`)에 복사하고, 해당 파일에 대한 읽기 권한을 jenkins 사용자에게 부여합니다. 자세한 절차는 **04번 문서 7단계 (kubectl)** 를 참고하세요.
 
 #### 방법 B: Kubernetes 서비스 계정 토큰
 
@@ -346,7 +204,8 @@ pipeline {
     stage('Build WAR') {
       steps {
         sh 'mvn clean package -DskipTests'
-        sh 'cp target/*.war app.war'
+        // 단일 모듈: target/*.war / 멀티 모듈: WAR가 나오는 서브모듈 경로 사용 (아래 4-2-4 참고)
+        sh 'cp humanframe.web/target/*.war app.war'
       }
     }
     stage('Docker Build & Push') {
@@ -363,23 +222,25 @@ pipeline {
   }
   post {
     always {
-      cleanWs()
+      deleteDir()   // 워크스페이스 정리 (cleanWs는 Workspace Cleanup 플러그인 필요)
     }
   }
 }
 ```
 
+**실행 환경**: 위 파이프라인은 **Kubernetes 노드가 아닌 일반 에이전트**(`agent any`)에서 동작합니다. Jenkins Controller(빌트인 노드) 또는 Docker가 설치된 일반 에이전트에서 실행하면 되며, Kubernetes Cloud/Agent는 필수가 아닙니다. 해당 노드에 Docker CLI·데몬이 있어야 `docker.build()`가 동작합니다.
+
 **수정 포인트**
 
 - `REGISTRY`: 02번 Private Registry 주소 (Jenkins/Agent에서 접근 가능한 IP 또는 호스트명, 예: `192.168.1.100:5000`)
 - `APP_NAME`: 07번 Deployment의 이미지 이름과 동일 (예: `h-cms`)
-- `target/*.war`: Maven 기본 산출물. Gradle이면 `build/libs/*.war` 등으로 변경
+- WAR 복사 경로: 단일 모듈이면 `target/*.war`, 멀티 모듈이면 WAR를 빌드하는 서브모듈 경로 (예: `humanframe.web/target/*.war`). 자세한 내용은 [4-2-4](#4-2-4-멀티-모듈에서-war-파일-경로) 참고.
 - `registry-credentials`: 3단계에서 등록한 Registry Credentials ID
 - `tools { maven 'M3' }`: 4-2-1에서 Jenkins에 등록한 Maven 이름과 일치시킵니다. Maven을 쓰지 않으면 해당 블록을 제거합니다.
 
 ### 4-2-1. mvn: not found 해결 (Maven 사용 방법)
 
-Jenkins 기본 이미지(`jenkins/jenkins:lts-jdk17`)에는 **Maven이 포함되어 있지 않습니다**. `mvn clean package` 실행 시 `mvn: not found` 오류가 나면 아래 중 하나를 적용하세요.
+04번에서 **Linux에 직접 설치한 Jenkins**에는 기본적으로 Maven이 포함되어 있지 않습니다. `mvn clean package` 실행 시 `mvn: not found` 오류가 나면 아래 중 하나를 적용하세요.
 
 #### 방법 1: Jenkins에서 Maven 자동 설치 (권장)
 
@@ -427,7 +288,7 @@ stage('Build WAR') {
 - `maven:3.8-eclipse-temurin-8`: JDK 8 기반 Maven 이미지. JDK 11이 필요하면 `maven:3.8-eclipse-temurin-11` 등으로 변경
 - `-v ${env.HOME}/.m2:/root/.m2`: 로컬 Maven 캐시를 컨테이너에 마운트해 의존성 재다운로드를 줄임
 
-**주의**: Jenkins가 Kubernetes Pod로만 동작하고 Docker 소켓이 없다면 `docker.image().inside()`는 사용할 수 없습니다. 이 경우 **방법 1**을 사용하세요.
+**주의**: Jenkins 실행 환경에 Docker가 없거나 Docker 소켓을 쓸 수 없다면 `docker.image().inside()`는 사용할 수 없습니다. 이 경우 **방법 1**(Maven 자동 설치)을 사용하세요.
 
 ### 4-2-2. HTTP 저장소 차단 (maven-default-http-blocker)
 
@@ -545,9 +406,31 @@ Manage Jenkins → **Tools** → Maven → 해당 Maven 항목 → **Properties*
 
 (항목 이름이 "Environment variables" 등으로 되어 있으면 `MAVEN_OPTS=-Xmx2048m` 형태로 넣습니다.)
 
-**참고**: Jenkins Pod/Agent의 메모리 한도보다 Maven 힙을 너무 크게 주면 OOMKilled 될 수 있으므로, Pod의 `resources.limits.memory`(예: 2Gi)보다 작게 `-Xmx`를 설정하는 것이 좋습니다.
+**참고**: Jenkins 실행 환경(서버 또는 Agent)의 메모리 한도보다 Maven 힙을 너무 크게 주면 OOM이 날 수 있으므로, 사용 가능한 메모리보다 작게 `-Xmx`를 설정하는 것이 좋습니다.
 
-**Insecure Registry (HTTP 5000)**  
+### 4-2-4. 멀티 모듈에서 WAR 파일 경로
+
+**단일 모듈** 프로젝트에서는 Maven 산출물이 루트의 `target/*.war`에 생성됩니다. **멀티 모듈**에서는 WAR를 만드는 서브모듈의 `target/` 아래에 생성됩니다.
+
+예: `humanframe.web/target/jnet.humanframe.web-2.2.1.war`  
+→ 워크스페이스 루트 기준으로 `humanframe.web/target/` 안에 WAR가 있으므로, 복사 시 해당 경로를 사용합니다.
+
+| 프로젝트 구조 | 복사 명령 예시 |
+|---------------|----------------|
+| 단일 모듈 (루트에 pom + target) | `sh 'cp target/*.war app.war'` |
+| 멀티 모듈, WAR가 `humanframe.web/target/`에 있음 | `sh 'cp humanframe.web/target/*.war app.war'` |
+| 서브모듈 경로가 다름 | `sh 'cp <서브모듈디렉터리>/target/*.war app.war'` (실제 경로로 변경) |
+
+**경로를 모를 때**: 빌드 한 번 실행 후 Console Output에서 `Building war: .../target/xxx.war` 로그를 확인하거나, 아래처럼 찾아서 복사할 수 있습니다.
+
+```groovy
+sh 'cp $(find . -name "*.war" -path "*/target/*" | head -1) app.war'
+```
+
+`app.war`는 Dockerfile이 같은 디렉터리에서 `COPY app.war` 하므로, **워크스페이스 루트**에 두면 됩니다. 위 `cp` 명령은 모두 워크스페이스 루트에서 실행된다고 가정합니다.
+
+### 4-2-5. Insecure Registry (HTTP 5000)
+
 `https://` 없이 사용하는 레지스트리인 경우, Docker 데몬의 `insecure-registries`에 해당 주소를 넣어야 합니다. Jenkins Agent가 사용하는 Docker 호스트에서:
 
 ```bash
@@ -561,7 +444,91 @@ Manage Jenkins → **Tools** → Maven → 해당 Maven 항목 → **Properties*
 
 ### 4-3. (선택) Kaniko로 이미지 빌드·푸시
 
-Jenkins Pod 안에 Docker가 없는 경우, Kaniko 단계로 대체할 수 있습니다.
+Docker를 사용할 수 없는 **Kubernetes 에이전트** 등에서만 사용하는 방식입니다. **04번처럼 Linux에 Jenkins를 직접 설치하고 같은 서버에 Docker가 있다면** 위 **4단계 기본 예시**(`agent any` + `docker.build()`)를 사용하는 것이 더 단순합니다. Docker 소켓을 쓸 수 없을 때만 Kaniko 단계로 대체할 수 있습니다.
+
+#### Kaniko 사용 시 필수: Kubernetes Pod Template
+
+`container('kaniko')`를 쓰려면 파이프라인이 **Kubernetes Pod 에이전트** 위에서 돌아야 합니다. 따라서 **agent를 `agent any`가 아니라 Kubernetes podTemplate을 쓰도록** 변경해야 합니다.
+
+**전체 Jenkinsfile 예시 (Kaniko + Maven, Kubernetes Agent)**  
+Registry 주소·앱명·Credentials ID는 환경에 맞게 변경하세요. Workspace Cleanup 플러그인이 있으면 `post { always { cleanWs() } }` 사용 가능합니다.
+
+```groovy
+pipeline {
+  agent {
+    kubernetes {
+      defaultContainer 'jnlp'
+      yaml """
+apiVersion: v1
+kind: Pod
+spec:
+  containers:
+  - name: jnlp
+    image: jenkins/inbound-agent:4.11-1
+  - name: kaniko
+    image: gcr.io/kaniko-project/executor:debug
+    command: ["/busybox/cat"]
+    tty: true
+"""
+    }
+  }
+  tools {
+    maven 'M3'
+  }
+  environment {
+    MAVEN_OPTS = '-Xmx2048m -Xms256m'
+    REGISTRY = '172.16.0.194:5000'
+    APP_NAME = 'h-cms'
+    IMAGE = "${REGISTRY}/${APP_NAME}:${env.BUILD_NUMBER}"
+    IMAGE_LATEST = "${REGISTRY}/${APP_NAME}:latest"
+  }
+  stages {
+    stage('Checkout') {
+      steps { checkout scm }
+    }
+    stage('Build WAR') {
+      steps {
+        sh 'mvn clean package -DskipTests'
+        sh 'cp humanframe.web/target/*.war app.war'
+      }
+    }
+    stage('Docker Build & Push (Kaniko)') {
+      steps {
+        container('kaniko') {
+          sh """
+            /kaniko/executor \
+              --context ${env.WORKSPACE} \
+              --dockerfile ${env.WORKSPACE}/Dockerfile \
+              --destination ${env.IMAGE} \
+              --destination ${env.IMAGE_LATEST} \
+              --insecure \
+              --skip-tls-verify
+          """
+        }
+      }
+    }
+  }
+  post {
+    always {
+      cleanWs()
+    }
+  }
+}
+```
+
+**변경 포인트 요약**
+
+| 항목 | 변경 내용 |
+|------|-----------|
+| **agent** | `agent any` → `agent { kubernetes { ... } }` (Pod에 `jnlp` + `kaniko` 컨테이너 정의) |
+| **Kaniko 경로** | `\${WORKSPACE}` → `${env.WORKSPACE}` (Groovy에서 경로 확장 후 컨테이너에 전달, 워크스페이스 공유 경로 동일) |
+| **Kaniko 이미지 주소** | `--destination ${IMAGE}` → `--destination ${env.IMAGE}` (컨테이너 내부에서 env로 전달되므로 `env.` 사용 권장) |
+| **post** | `cleanWs()` 유지 (Workspace Cleanup 플러그인 설치 시 Kubernetes 에이전트에서도 동작) |
+
+**Registry 인증이 필요한 경우**  
+Private Registry에 push 시 인증이 필요하면, Kaniko가 읽는 `/kaniko/.docker/config.json`을 Pod에 마운트해야 합니다. Kubernetes Secret으로 docker config를 만든 뒤 Pod Template의 `kaniko` 컨테이너에 volumeMount로 넣거나, Kaniko 문서의 인증 방식을 따릅니다.
+
+**기존 단계만 참고할 때 (agent는 이미 Kubernetes로 설정된 경우)**
 
 ```groovy
 stage('Docker Build & Push (Kaniko)') {
@@ -569,8 +536,8 @@ stage('Docker Build & Push (Kaniko)') {
     container('kaniko') {
       sh """
         /kaniko/executor \
-          --context \${WORKSPACE} \
-          --dockerfile \${WORKSPACE}/Dockerfile \
+          --context ${env.WORKSPACE} \
+          --dockerfile ${env.WORKSPACE}/Dockerfile \
           --destination ${IMAGE} \
           --destination ${IMAGE_LATEST} \
           --insecure \
@@ -580,8 +547,6 @@ stage('Docker Build & Push (Kaniko)') {
   }
 }
 ```
-
-이 경우 Kubernetes Pod Template에 `gcr.io/kaniko-project/executor:debug` 같은 Kaniko 이미지를 쓰고, Registry 인증은 Kaniko용 `config.json`을 Secret으로 마운트하는 방식으로 처리합니다. 상세는 Kaniko 문서를 참고하세요.
 
 ---
 
@@ -685,7 +650,7 @@ pipeline {
     stage('Build WAR') {
       steps {
         sh 'mvn clean package -DskipTests'
-        sh 'cp target/*.war app.war'
+        sh 'cp humanframe.web/target/*.war app.war'   // 멀티 모듈: WAR 나오는 경로로 변경 (4-2-4 참고)
       }
     }
     stage('Docker Build & Push') {
@@ -710,7 +675,7 @@ pipeline {
     }
   }
   post {
-    always { cleanWs() }
+    always { deleteDir() }   // 워크스페이스 정리 (Kubernetes 노드 불필요)
   }
 }
 ```
@@ -761,8 +726,9 @@ kubectl port-forward -n dev svc/h-cms 8080:80
 | `mvn: not found` | Jenkins 이미지에 Maven 미포함 | [4-2-1](#4-2-1-mvn-not-found-해결-maven-사용-방법): Global Tool Configuration에서 Maven 자동 설치 후 `tools { maven 'M3' }` 사용, 또는 Docker로 Maven 컨테이너 사용 |
 | `maven-default-http-blocker`, HTTP 저장소 차단 | Maven 3.8.1+ 기본 정책으로 HTTP 저장소 차단 | [4-2-2](#4-2-2-http-저장소-차단-maven-default-http-blocker): Maven 3.6.3 사용 또는 settings.xml에 `maven-default-http-blocker`를 `blocked=false`로 덮어쓰기 |
 | `Java heap space`, `Error assembling WAR` | Maven JVM 힙 부족 | [4-2-3](#4-2-3-java-heap-space-maven-war-빌드-시-메모리-부족): Jenkinsfile `environment`에 `MAVEN_OPTS=-Xmx1024m` 또는 `-Xmx2048m` 설정 |
+| `Node is not a Kubernetes node` | post/단계가 Kubernetes 전용 step(container, podTemplate 등)을 사용하거나 Kubernetes 에이전트 전제로 동작함 | 문서 기본 예시는 **일반 노드**(`agent any`)용. `cleanWs` → `deleteDir()` 로 변경, Kubernetes용 `container`/`podTemplate` 제거. Job이 **Docker 설치된 일반 에이전트**에서 실행되도록 설정 |
 | `docker.build` 실패 | Agent에 Docker 없음 또는 Docker 소켓 미연결 | Docker 사용 가능한 Agent 사용 또는 Kaniko로 전환 |
-| `denied: requested access to the resource is denied` | Registry 인증 실패 | Credentials ID·Username/Password 확인, insecure-registries 확인 |
+| `denied: requested access to the resource is denied` | Registry 인증 실패 | Credentials ID·Username/Password 확인, [4-2-5](#4-2-5-insecure-registry-http-5000) insecure-registries 확인 |
 | `ImagePullBackOff` | K8s에서 이미지 pull 실패 | imagePullSecrets·이미지 주소·레지스트리 접근 가능 여부 확인 |
 | `kubectl: command not found` | Agent에 kubectl 미설치 | Agent 이미지에 kubectl 포함 또는 설치 단계 추가 |
 | `Unable to connect to the server` | kubectl 클러스터 미연결 | KUBECONFIG 또는 서비스 계정 권한 확인 |
@@ -785,7 +751,7 @@ kubectl rollout status deployment/h-cms -n dev
 
 | 단계 | 내용 |
 |------|------|
-| 1 | Jenkins 설치 (네임스페이스, PVC, Deployment, Service, NodePort 30080) |
+| 1 | Jenkins 설치 (04번: Linux 직접 설치, 접속 http://\<서버IP\>:8080) |
 | 2 | 플러그인 (Pipeline, Git, Docker Pipeline, Credentials) 및 보안 설정 |
 | 3 | Credentials: Registry, Git, (선택) Kubernetes |
 | 4 | Pipeline Job (SCM + Jenkinsfile), Dockerfile·Jenkinsfile 저장소 배치 |
