--- a/kubeadm/02.docker-registry.md
+++ b/kubeadm/02.docker-registry.md
@@ -1,6 +1,6 @@
 # Docker Registry 설치 가이드 (kubeadm 환경)
 
-Kubernetes 클러스터(kubeadm 단일 노드)와 동일한 서버 또는 접근 가능한 서버에 Private Docker Registry를 구축하는 가이드입니다. 01번 문서의 Rocky Linux + containerd 환경을 기준으로 하며, Jenkins(04번)에서 빌드한 이미지를 push하고 클러스터에서 pull할 때 사용할 수 있습니다.
+Kubernetes 클러스터(kubeadm 단일 노드)와 동일한 서버 또는 접근 가능한 서버에 Private Docker Registry를 구축하는 가이드입니다. 01번 문서의 Rocky Linux + containerd 환경을 기준으로 하며, Jenkins(04번, Linux 직접 설치)에서 빌드한 이미지를 push하고 클러스터에서 pull할 때 사용할 수 있습니다.
 
 ---
 
@@ -14,12 +14,12 @@ Kubernetes 클러스터(kubeadm 단일 노드)와 동일한 서버 또는 접근
 
 ## 설치 전 확인
 
-### 클러스터 상태
+01번 문서 완료 상태를 전제로 합니다. 노드가 `Ready`인지 확인합니다.
+
 ```bash
 kubectl get nodes
 kubectl get pods -A
 ```
-노드가 `Ready` 상태여야 합니다.
 
 ### Registry 서버에서 Docker 사용 가능 여부
 kubeadm 노드에는 기본적으로 **containerd**만 있으므로, Registry를 **Docker 컨테이너**로 실행하려면 같은 서버에 Docker CE를 설치해야 합니다. (또는 별도 서버에 Docker가 이미 있는 경우 해당 서버에 Registry를 설치합니다.)
@@ -314,7 +314,7 @@ kubectl delete pod hello-registry -n demo
 
 ## 9단계: Jenkins(04번)와 연동
 
-04번 Jenkins 가이드의 Jenkinsfile에서 `REGISTRY`를 이 Registry 주소로 설정하면 됩니다.
+04번 문서(Linux 직접 설치)의 Jenkins 가이드에 따라 구성한 Jenkins의 Jenkinsfile에서 `REGISTRY`를 이 Registry 주소로 설정하면 됩니다.
 
 - **Registry가 kubeadm 노드와 같은 서버인 경우:** `REGISTRY = '서버IP:5000'` (예: `192.168.1.100:5000`)
 - Jenkins에서 Docker로 빌드·push하므로, **Jenkins가 실행되는 호스트**에서 해당 주소로 접근 가능해야 하고, 인증서를 신뢰하거나 `--insecure-registry`로 접근할 수 있어야 합니다.
@@ -361,4 +361,4 @@ echo "https://$SERVER_IP:5000"
 
 ---
 
-- **다음 단계:** 04번 Jenkins에서 위 Registry를 `REGISTRY`로 설정해 이미지 빌드·push 후, 05번 Argo CD 등으로 배포할 수 있습니다.
+- **다음 단계:** 04번(Linux 직접 설치) Jenkins에서 위 Registry를 `REGISTRY`로 설정해 이미지 빌드·push 후, 05번 Argo CD 등으로 배포할 수 있습니다.
